--- a/web3ladies_t-matic/index.html
+++ b/web3ladies_t-matic/index.html
@@ -44,8 +44,41 @@
         </nav>
     </header>
     <main>
-    <section>
-        
+    <section class="hero">
+        <div class="hero-content">
+            <div class="hero-txt">
+                <h1>Matic-Lotto 
+                    <br>
+                    NFT Lottery 
+                    Community</h1>
+                    <p>Play the Matic-Lotto for a chance to win huge NFT prizes</p>
+                    <a href="#" class="read-more">Read more</a>
+            </div>
+            <div class="hero-img">
+                <img src="./assets/Hero-Image.png" alt="hero image">
+            </div>
+        </div>
+        <div class="hero-step">
+           <div class="step-info">
+            <h2>Matic-Lotto in 
+                3  steps</h2>
+                <a href="#" class="read-more">Read more</a>
+           </div>
+           <div class="steps">
+                <div class="step-message">
+                    <img src="./assets/icons/folder-connection.png" alt="">
+                    <p>Connect wallet</p>
+                </div>
+                <div class="step-message">
+                    <img src="./assets/icons/bitcoin-card.png" alt="">
+                    <p>NFT Ticket</p>
+                </div>
+                <div class="step-message">
+                    <img src="./assets/icons/bitcoin-convert.png" alt="">
+                    <p>Wait for the draw</p>
+                </div>
+           </div>
+        </div>
     </section>
     <!-- Barakat -->
 
