--- a/web3ladies_t-matic/index.html
+++ b/web3ladies_t-matic/index.html
@@ -48,33 +48,42 @@
         <div class="hero-content">
             <div class="hero-txt">
                 <h1>Matic-Lotto 
-                    <br>
+                    <br>   
                     NFT Lottery 
                     Community</h1>
                     <p>Play the Matic-Lotto for a chance to win huge NFT prizes</p>
                     <a href="#" class="read-more">Read more</a>
             </div>
             <div class="hero-img">
+                <div class="overlay-1"></div>
                 <img src="./assets/Hero-Image.png" alt="hero image">
             </div>
         </div>
         <div class="hero-step">
            <div class="step-info">
+            <div class="overlay-2"></div>
             <h2>Matic-Lotto in 
+                <br>
                 3  steps</h2>
                 <a href="#" class="read-more">Read more</a>
            </div>
            <div class="steps">
                 <div class="step-message">
+                   <div class="h-bg">
                     <img src="./assets/icons/folder-connection.png" alt="">
+                   </div>
                     <p>Connect wallet</p>
                 </div>
                 <div class="step-message">
+                   <div class="h-bg">
                     <img src="./assets/icons/bitcoin-card.png" alt="">
-                    <p>NFT Ticket</p>
+                   </div>
+                    <p>Buy NFT Ticket</p>
                 </div>
                 <div class="step-message">
+                   <div class="h-bg">
                     <img src="./assets/icons/bitcoin-convert.png" alt="">
+                   </div>
                     <p>Wait for the draw</p>
                 </div>
            </div>
@@ -95,7 +104,26 @@
     <!-- Glory -->
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="social">
+            <h3>FOLLOW US</h3>
+            <div class="social-icon">
+                <img src="./assets/icons/bxl-twitter.svg.png" alt="">
+                <img src="./assets/icons/bxl-instagram.svg.png" alt="">
+                <img src="./assets/icons/bxl-discord.svg.png" alt="">
+            </div>
+        </div>
+        <div class="copyright">
+            <span>Copyright © T-Matic Team</span>
+            <ul class="footer-nav">
+                <li>Home</li>
+                <li>Lotteries</li>
+                <li>Result</li>
+                <li>About</li>
+                <li>How to play</li>
+            </ul>
+        </div>
+    </footer>
     <!--custom script  -->
     <script src="./javascript/script.js"></script>
 </body>
