--- a/web3ladies_t-matic/index.html
+++ b/web3ladies_t-matic/index.html
@@ -37,8 +37,17 @@
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
-                <a class="connect-btn">Connect Wallet</a>
+                <div class="btn">
+                    <a class="connect-btn">Connect Wallet</a>
                 <span class="close-bar"><i class="fa-solid fa-xmark"></i></span>
+                <ul class="connect-wallet" id="connect-wallet">
+                    <li class="wallet-link">Select your wallet <span class="close-opt"><i class="fa-solid fa-xmark"></i></span></li>
+                    <li class="wallet-link">Phantom <img src="./assets/icons/phantom.png" alt=""></li>
+                    <li class="wallet-link" >Slope <img src="./assets/icons/slope.png" alt=""></li>
+                    <li class="wallet-link">Metamask <img src="./assets/icons/metamask.png" alt="metamask"></li>
+                    <li class="wallet-link">More Options<span class="dwn-angle"><i class="fa-solid fa-angle-down"></i></span></li>
+                </ul>
+                </div>
             </div>
            </div>
         </nav>
