--- a/web3ladies_t-matic/index.html
+++ b/web3ladies_t-matic/index.html
@@ -7,6 +7,10 @@
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Importing swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    
     <!-- custom styling -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Lotery Matic</title>
@@ -102,7 +106,47 @@
 
     <!-- Hafsoh -->
     <section>
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./assets/player1.png" alt="">
+                <div class="details-container">
+                    <div class="btn-div">
+                        <p class="sold-out-btn" >SOLD OUT</p>
+                    </div>
+                    <div>
+                        <p class="angry-joe">Angry Joe #990</p>
+                    </div>  
+                    <div style="display: flex;">
+                        <div style="padding: 10px;" class="tickets">
+                            <p>Tickets</p>
+                            <p>200</p>
+                        </div>
+                        <div style="border-right:1px solid rgb(36, 36, 96);"></div>
+                        <div style="padding: 10px;" >
+                            <p class="price">Price</p>
+                            <p class="eth">36 Eth</p>
+                        </div>
+                    </div>
 
+                    <div class="more-details-div">
+                        <span class="more-div">More Details &nbsp; &nbsp;<i class="fa-solid fa-arrow-right"></i></span>
+                    </div>
+                </div>
+                
+              </div>
+
+
+              <div class="swiper-slide"><img src="" alt=""></div>
+              <div class="swiper-slide">Slide 3</div>
+              <div class="swiper-slide">Slide 4</div>
+              <div class="swiper-slide">Slide 5</div>
+
+            </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>      
     </section>
     <!-- Hafsoh -->
 
