--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- custom styling -->
-    <link rel="stylesheet" href="./web3ladies_t-matic/css/header.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/playscreen.css">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <title>Lotery Matic</title>
 </head>
@@ -40,7 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
                 <div class="btn">
-                    <a class="connect-btn">Connect Wallet</a>
+                <a class="connect-btn">Connect Wallet</a>
                 <span class="close-bar"><i class="fa-solid fa-xmark"></i></span>
                 <ul class="connect-wallet" id="connect-wallet">
                     <li class="wallet-link">Select your wallet <span class="close-opt"><i class="fa-solid fa-xmark"></i></span></li>
@@ -55,9 +56,160 @@
         </nav>
     </header>
     <main>
-   
     <!-- Barakat -->
+    <section class="profile-card">
+        <div class="user-card">
+            <div class="user-img">
+                <img src="./assets/player3.png" alt="">
+            </div>
+            <div class="ff">
+            <p class="username">Angry Joe #990</p>
+            <div class="ticket-info">
+             <p class="ticket">
+                Tickets 
+                <br> 200
+             </p>
+             
+             <p class="price">
+                Price 
+                <br> <span>66 Eth</span>
+             </p>
+            </div>
+            <small>More Details
+    <span class="right-arrow"><i class="fa-solid fa-arrow-right"></i></span>
+                
+            </small>
+            </div>
+        </div>
+        <div class="drawin">
+            <h4>Draw in</h4>
+            <div class="time">
+            <p class="hr">20h</p>
+            <p class="min">20min</p>
 
+            </div>
+            <div class="play-btn">
+                <p class="rule">Rules</p>
+                <p class="result">Results</p>
+            </div>
+        </div>
+    </section>
+    <section class="game">
+        <ul class="value-input">
+            <li class="num-input">22</li>
+            <li class="num-input">4</li>
+            <li class="num-input">5</li>
+            <li class="num-input">7</li>
+            <li class="num-input"></li>
+            <li class="num-input"></li>
+        </ul>
+
+        <ul class="game-num">
+            <li class="num">1</li>
+            <li class="num">2</li>
+            <li class="num">3</li>
+            <li class="num">4</li>
+            <li class="num">5</li>
+            <li class="num">6</li>
+            <li class="num">7</li>
+            <li class="num">8</li>
+            <li class="num">9</li>
+            <li class="num">10</li>
+            <li class="num">11</li>
+            <li class="num">12</li>
+            <li class="num">13</li>
+            <li class="num">14</li>
+            <li class="num">15</li>
+            <li class="num">16</li>
+            <li class="num">17</li>
+            <li class="num">18</li>
+            <li class="num">19</li>
+            <li class="num">20</li>
+            <li class="num">21</li>
+            <li class="num">22</li>
+            <li class="num">23</li>
+            <li class="num">24</li>
+            <li class="num">25</li>
+            <li class="num">26</li>
+            <li class="num">27</li>
+            <li class="num">28</li>
+            <li class="num">29</li>
+            <li class="num">30</li>
+            <li class="num">31</li>
+            <li class="num">32</li>
+            <li class="num">33</li>
+            <li class="num">34</li>
+            <li class="num">35</li>
+            <li class="num">36</li>
+            <li class="num">37</li>
+            <li class="num">38</li>
+            <li class="num">39</li>
+            <li class="num">40</li>
+            <li class="num">41</li>
+            <li class="num">42</li>
+            <li class="num">43</li>
+            <li class="num">44</li>
+            <li class="num">45</li>
+            <li class="num">46</li>
+            <li class="num">47</li>
+            <li class="num">48</li>
+            <li class="num">49</li>
+            <li class="num">50</li>
+            <li class="num">51</li>
+            <li class="num">52</li>
+            <li class="num">53</li>
+            <li class="num">54</li>
+            <li class="num">55</li>
+            <li class="num">56</li>
+            <li class="num">57</li>
+            <li class="num">58</li>
+            <li class="num">59</li>
+            <li class="num">60</li>
+            <li class="num">61</li>
+            <li class="num">62</li>
+            <li class="num">63</li>
+            <li class="num">64</li>
+            <li class="num">65</li>
+            <li class="num">66</li>
+            <li class="num">67</li>
+            <li class="num">68</li>
+            <li class="num">69</li>
+            <li class="num">70</li>
+            <li class="num">71</li>
+            <li class="num">72</li>
+            <li class="num">73</li>
+            <li class="num">74</li>
+            <li class="num">75</li>
+            <li class="num">76</li>
+            <li class="num">77</li>
+            <li class="num">78</li>
+            <li class="num">79</li>
+            <li class="num">80</li>
+            <li class="num">81</li>
+            <li class="num">82</li>
+            <li class="num">83</li>
+            <li class="num">84</li>
+            <li class="num">85</li>
+            <li class="num">86</li>
+            <li class="num">87</li>
+            <li class="num">88</li>
+            <li class="num">89</li>
+            <li class="num">90</li>
+            <li class="num">91</li>
+            <li class="num">92</li>
+            <li class="num">93</li>
+            <li class="num">94</li>
+            <li class="num">95</li>
+            <li class="num">96</li>
+            <li class="num">97</li>
+            <li class="num">98</li>
+            <li class="num">99</li>
+        </ul>
+
+        <p class="draw-num"><span>1</span> draw</p>
+        <button class="confirm-draw">Confirm Transaction</button>
+    </section>
+    <!-- Barakat -->
     <!-- Hafsoh -->
     <section>
 
