game screen update

--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/playscreen.css">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <title>Lotery Matic</title>
+    <title>Play Game</title>
 </head>
 <body>
     <!-- arrow icons -->
@@ -244,6 +244,7 @@
         </div>
     </footer>
     <!--custom script  -->
+    <script src="./javascript/playscreen.js"></script>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
