added gradient colors respectively

--- a/web3ladies_t-matic/index.html
+++ b/web3ladies_t-matic/index.html
@@ -121,7 +121,7 @@
 
         <!-- SMALL SCREEN SWIPER DIV -->
         <div class="swiper-div" style="display: flex; flex-direction: row; overflow-x: scroll;">
-            <div class="swiper-slide">
+            <div class="swiper-slide user1">
                 <img src="./assets/player1.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide user2">
                 <img src="./assets/player1.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
@@ -175,7 +175,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide user3">
                 <img src="./assets/player1.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
@@ -202,7 +202,7 @@
                 </div>
             </div>
             
-            <div class="swiper-slide">
+            <div class="swiper-slide user4">
                 <img src="./assets/player1.png" alt="">
                 <div class="details-container">
                     <div class="btn-div">
