--- a/web3ladies_t-matic/result.html
+++ b/web3ladies_t-matic/result.html
@@ -10,9 +10,9 @@
 
     <!-- custom styling -->
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/draw.css">
+    <link rel="stylesheet" href="./css/result.css">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <title>Draw result</title>
+    <title>Result</title>
 </head>
 <body>
     <!-- arrow icons -->
@@ -57,19 +57,66 @@
     </header>
     <main>
     <!-- Barakat -->
-    
+    <section class="result-info">
+        <h2 class="sec-title">Matic-Lotto Results & 
+            Winning Numbers</h2>
+            <p class="info"> <span>Check the latest Matic Lotto results and find out if you are a winner!</span>   
+                Compare your lucky number from your ticket with the official Matic
+                Lotto results. If your numbers match the numbers chosen during 
+                the draw - you win!</p>
+    </section>
+    <div class="result-table">
+        <table>
+            <thead>
+               <tr>
+                <th>Lottery Name</th>
+                <th>Last Draw Date</th>
+                <th>Result</th>
+               </tr>
+            </thead>
+            <tbody>
+                <tr class="table-row">
+                    <td>Angry Joe</td>
+                    <td>22-09-2022</td>
+                    <td> <ul class="lucky-number">
+                        <li>9</li>
+                        <li>88</li>
+                        <li>45</li>
+                        <li>54</li>
+                        <li>65</li>
+                        <li>4</li>
+                    </ul></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Celine Emm</td>
+                    <td>20-09-2022</td>
+                    <td> <ul class="lucky-number">
+                        <li>32</li>
+                        <li>12</li>
+                        <li>8</li>
+                        <li>22</li>
+                        <li>2</li>
+                        <li>76</li>
+                    </ul></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Jane Fist</td>
+                    <td>18-09-2022</td>
+                    <td> <ul class="lucky-number">
+                        <li>43</li>
+                        <li>4</li>
+                        <li>1</li>
+                        <li>7</li>
+                        <li>38</li>
+                        <li>9</li>
+                    </ul></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <!-- Barakat -->
-    <!-- Hafsoh -->
-    <section>
 
-    </section>
-    <!-- Hafsoh -->
-
-    <!-- Glory -->
-    <section>
-
-    </section>
-    <!-- Glory -->
+  
     </main>
 
     <footer>
@@ -94,5 +141,6 @@
     </footer>
     <!--custom script  -->
     <script src="./javascript/script.js"></script>
+    <script src="./javascript/result.js"></script>
 </body>
 </html>
