worked on claim reward page

--- a/web3ladies_t-matic/claim-reward.html
+++ b/web3ladies_t-matic/claim-reward.html
@@ -61,7 +61,13 @@
     <!-- Barakat -->
     <!-- Hafsoh -->
     <section>
-
+        <p class="congrats">Congratulations  &#129321;</p>
+        <p class="matic">Your Matic Lotto NFT is here</p>
+        
+        <div class="img-div">
+            <img src="./assets/player1.png" alt="" class="matic-img" />
+        </div>
+        
     </section>
     <!-- Hafsoh -->
 
