--- a/web3ladies_t-matic/index.html
+++ b/web3ladies_t-matic/index.html
@@ -23,7 +23,7 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <img class="logo-img" src="./assets/icons/Logo.png" alt="">
+                <a href="./index.html"><img class="logo-img" src="./assets/icons/Logo.png" alt=""></a>
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
@@ -33,11 +33,11 @@
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="#">Result</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#lotteries">Lotteries</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="./result.html">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#how-to-play">How to play</a></li>
                 </ul>
                 <div class="btn">
                     <a class="connect-btn">Connect Wallet</a>
@@ -63,14 +63,14 @@
                     NFT Lottery 
                     Community</h1>
                     <p>Play the Matic-Lotto for a chance to win huge NFT prizes</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <a href="./playscreen.html" target="_blank" class="read-more">Play Now</a>
             </div>
             <div class="hero-img">
                 <div class="overlay-1"></div>
                 <img src="./assets/Hero-Image.png" alt="hero image">
             </div>
         </div>
-        <div class="hero-step">
+        <div id="how-to-play" class="hero-step">
            <div class="step-info">
             <div class="overlay-2"></div>
             <h2>Matic-Lotto in 
@@ -103,10 +103,9 @@
     <!-- Barakat -->
 
     <!-- Hafsoh---->
-        <section>
+        <section id="lotteries">
         <p class="lottery-tag">Recent Lotteries</p>
         <!--  SWIPER DIV -->    
-
         
         <div class="swiper-div" style="display: flex; flex-direction: row; overflow-x: scroll;">
             <div class="swiper-slide user1">
