--- a/web3ladies_t-matic/result.html
+++ b/web3ladies_t-matic/result.html
@@ -24,7 +24,7 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <img class="logo-img" src="./assets/icons/Logo.png" alt="">
+                <a href="./index.html"><img class="logo-img" src="./assets/icons/Logo.png" alt=""></a>  
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
