--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -24,7 +24,7 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <img class="logo-img" src="./assets/icons/Logo.png" alt="">
+              <a href="./index.html" target="_parent"><img class="logo-img" src="./assets/icons/Logo.png" alt=""></a>  
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
@@ -34,9 +34,9 @@
             </div>
             <div class="collapse">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html" target="_parent">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Lotteries</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="#">Result</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="./result.html">Result</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">How to play</a></li>
                 </ul>
@@ -90,7 +90,7 @@
             </div>
             <div class="play-btn">
                 <p class="rule">Rules</p>
-                <p class="result">Results</p>
+                <a class="result" href="./result.html" target="_blank">Results</a>
             </div>
         </div>
     </section>
@@ -207,7 +207,7 @@
         </ul>
 
         <p class="draw-num"><span>1</span> draw</p>
-        <button class="confirm-draw">Confirm Transaction</button>
+       <a href="./reward.html"><button class="confirm-draw">Confirm Transaction</button></a> 
     </section>
     <!-- Barakat -->
     <!-- Hafsoh -->
