--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- custom styling -->
-    <link rel="stylesheet" href="./web3ladies_t-matic/css/style.css">
-    <link rel="stylesheet" href="./web3ladies_t-matic/css/style.css">
+    <link rel="stylesheet" href="web3ladies_t-matic/css/header.css">
+    <link rel="stylesheet" href="web3ladies_t-matic/css/style.css">
     <title>Lotery Matic</title>
 </head>
 <body>
@@ -23,12 +23,12 @@
         <nav>
            <!--  -->
             <div class="logo">
-                <a href="./index.html"><img class="logo-img" src="./assets/icons/Logo.png" alt=""></a>
+                <a href="./index.html"><img class="logo-img" src="web3ladies_t-matic/assets/icons/Logo.png" alt=""></a>
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
            <div class="collapsible">
             <div class="logo2">
-                <img class="logo-img" src="./assets/icons/Logo.png" alt="">
+                <img class="logo-img" src="web3ladies_t-matic/assets/icons/Logo.png" alt="">
                 <span class="menu-bar"><i class="fa-solid fa-bars"></i></span>
             </div>
             <div class="collapse">
@@ -67,7 +67,7 @@
             </div>
             <div class="hero-img">
                 <div class="overlay-1"></div>
-                <img src="./assets/Hero-Image.png" alt="hero image">
+                <img src="web3ladies_t-matic/assets/Hero-Image.png" alt="hero image">
             </div>
         </div>
         <div id="how-to-play" class="hero-step">
@@ -455,7 +455,7 @@
     <!-- Swipper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!--custom script  -->
-    <script src="./javascript/script.js"></script>
+    <script src="web3ladies_t-matic/javascript/script.js"></script>
     <script src="./javascript/claim-reward.js"></script>
 </body>
 </html>
