connect wallet function

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- blockchain wallet signin -->
+
+    <!-- blockchain wallet signin -->
     <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script>
+
     <!-- NFT Loto contract link -->
     <!-- <script type="application/javascript" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
+    
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
@@ -458,11 +461,11 @@
     </footer>
     <!-- NFT Lotto contract functions -->
     <script src="./web3ladies_t-matic/javascript/blockchain.js"></script>
-    <script src="./lotto_NFT.js"></script>
+    <!-- <script src="./lotto_NFT.js"></script> -->
     <!-- Swipper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!--custom script  -->
     <script src="web3ladies_t-matic/javascript/script.js"></script>
-    <script src="web3ladies_t-matic/javascript/claim-reward.js"></script>
+    <!-- <script src="web3ladies_t-matic/javascript/claim-reward.js"></script> -->
 </body>
 </html>
