--- a/web3ladies_t-matic/admin.html
+++ b/web3ladies_t-matic/admin.html
@@ -14,6 +14,7 @@
     <!-- custom styling -->
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/admin.css">
+    
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <title>Admin</title>
 </head>
@@ -215,10 +216,10 @@
         </div>
     </footer>
     <!-- NFT Lotto contract functions -->
-    
     <script src="./web3ladies_t-matic/javascript/blockchain.js"></script>
+
     <!--custom script  -->
-    <!-- <script src="./javascript/script.js"></script> -->
+    <script src="./javascript/script.js"></script>
     <!-- <script src="./javascript/result.js"></script> -->
 </body>
 </html>
