--- a/web3ladies_t-matic/claim-reward.html
+++ b/web3ladies_t-matic/claim-reward.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/claim-reward.css">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <title>Draw result</title>
+    <title>claim reward</title>
 </head>
 <body>
     <!-- arrow icons -->
@@ -114,9 +114,9 @@
     <section>
         <p class="congrats">Congratulations  &#129321;</p>
         <p class="matic">Your Matic Lotto NFT is here</p>
-        
+        <button class="eth-reward">claim reward</button>
         <div class="img-div">
-            <img src="./assets/player1.png" alt="" class="matic-img" />
+          <img src="./assets/player1.png" alt="" class="matic-img" />
         </div>
         
     </section>
